--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Jekyll-Uno
-description: "Jekyll-Uno - a minimal, responsive theme for Jekyll"
-url: "https://saeoseas.github.io/"
-baseurl: ""
+title: FxckingOS
+description: ""
+url: "https://saeoseas.github.io"
+baseurl: "/"
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 # disable_landing_page: true
@@ -10,10 +10,11 @@ baseurl: ""
 author:
   name: "Josh Gerdes"
   email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
+  #twitter_username: joshgerdes
+  #facebook_username: joshgerdes
   github_username: joshgerdes
-  linkedin_username: joshgerdes
+  github_username: joshgerdes
+  #linkedin_username: joshgerdes
 
 defaults:
   - scope:
