--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: FxckingOS
 description: ""
-url: "https://saeoseas.github.io"
-baseurl: "/"
+url: "https://saeoseas.github.io/"
+baseurl: ""
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 # disable_landing_page: true
